# kora-rent-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE.md  Makefile  README.md  RENT_RECLAIM.md  audit_log.csv  docker-compose.yml  grace_period.json  kora.toml  openapi.json  redis.conf  rustfmt.toml  signers.example.toml
.github/: cliff.toml
.github/actions/cleanup-test-env/: action.yml
.github/actions/run-test-runner/: action.yml
.github/actions/setup-solana/: action.yml
.github/actions/show-failure-logs/: action.yml
.github/badges/: coverage.json
.github/workflows/: build-rust.yml  coverage.yml  rust-publish.yml  rust-unit.yml  rust.yml  ts-sdk-publish-manual.yml  ts-sdk-publish.yml  typescript-integration.yml  typescript-unit.yml  validate-changeset.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  rent_manager.rs
crates/cli/src/rent_manager/: config.rs  logic.rs  mod.rs  state.rs  tui.rs  types.rs  utils.rs
crates/cli/src/setup/: zombie_account_setup.rs
crates/lib/: Cargo.toml
crates/lib/src/: cache.rs  config.rs  constant.rs  error.rs  log.rs  mod.rs  rpc.rs  sanitize.rs  state.rs
crates/lib/src/admin/: mod.rs  token_util.rs
crates/lib/src/fee/: fee.rs  mod.rs  price.rs
crates/lib/src/metrics/: README.md  balance.rs  docker-compose.metrics.yml  handler.rs  middleware.rs  mod.rs  prometheus.yml
crates/lib/src/metrics/grafana/provisioning/dashboards/: kora-metrics.json
crates/lib/src/metrics/grafana/provisioning/datasources/: datasources.yml
crates/lib/src/oracle/: jupiter.rs  mod.rs  oracle.rs  utils.rs
crates/lib/src/rpc_server/: args.rs  auth.rs  middleware_utils.rs  mod.rs  rpc.rs  server.rs
crates/lib/src/rpc_server/method/: estimate_transaction_fee.rs  get_blockhash.rs  get_config.rs  get_payer_signer.rs  get_supported_tokens.rs  mod.rs  sign_and_send_transaction.rs  sign_transaction.rs  transfer_transaction.rs
crates/lib/src/rpc_server/openapi/: docs.rs  helper.rs  mod.rs
crates/lib/src/rpc_server/openapi/spec/: combined_api.json
crates/lib/src/signer/: config.rs  init.rs  keypair_util.rs  mod.rs  pool.rs  signer.rs  utils.rs
crates/lib/src/tests/: account_mock.rs  cache_mock.rs  config_mock.rs  mod.rs  rpc_mock.rs  toml_mock.rs  transaction_mock.rs
crates/lib/src/tests/common/: mod.rs
crates/lib/src/token/: interface.rs  mod.rs  spl_token.rs  spl_token_2022.rs  spl_token_2022_util.rs  token.rs
crates/lib/src/transaction/: instruction_util.rs  mod.rs  transaction.rs  versioned_message.rs  versioned_transaction.rs
crates/lib/src/usage_limit/: mod.rs  usage_store.rs  usage_tracker.rs
crates/lib/src/validator/: account_validator.rs  cache_validator.rs  config_validator.rs  macros.rs  math_validator.rs  mod.rs  signer_validator.rs  transaction_validator.rs
examples/: README.md
examples/deploy/: Dockerfile  kora.toml  signers.toml
examples/getting-started/: README.md
examples/getting-started/demo/client/: package.json  pnpm-lock.yaml
examples/getting-started/demo/client/src/: full-demo.ts  quick-start.ts  setup.ts
examples/getting-started/demo/server/: kora.toml  signers.toml
examples/x402/demo/: .env.example  README.md  package.json
examples/x402/demo/api/: package.json  pnpm-lock.yaml
examples/x402/demo/client/: package.json  pnpm-lock.yaml  tsconfig.json
examples/x402/demo/facilitator/: package.json  pnpm-lock.yaml
examples/x402/demo/kora/: kora.toml  signers.toml
makefiles/: BUILD.makefile  CLIENT.makefile  COVERAGE.makefile  DOCUMENTATION.makefile  METRICS.makefile  RELEASE.makefile  RUST_TESTS.makefile  TYPESCRIPT_TESTS.makefile  UTILS.makefile
sdks/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
sdks/.changeset/: brave-melons-stand.md  chatty-tigers-battle.md  config.json  quick-animals-attack.md  rare-ends-hug.md  salty-pants-end.md  spicy-lines-slide.md
sdks/ts/: .prettierrc.json  README.md  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.html.json  typedoc.json
sdks/ts/docs/: README.md
sdks/ts/examples/: basic-usage.ts
sdks/ts/scripts/: add-toc.js  generate-api-docs.js  test-with-validator.js
sdks/ts/src/: client.ts  index.ts
sdks/ts/src/types/: index.ts
sdks/ts/src/utils/: transaction.ts
sdks/ts/test/: auth-setup.ts  integration.test.ts  setup.ts  unit.test.ts
tests/: Cargo.toml
tests/adversarial/: body_size_limit.rs  fee_payer_exploitation.rs  main.rs  program_validation.rs  token_states.rs
tests/auth/: api_key_auth.rs  hmac_auth.rs  main.rs
tests/fee_payer_policy/: fee_payer_policy_violations.rs  main.rs
tests/free_signing/: free_signing_tests.rs  main.rs
tests/multi_signer/: main.rs  signer_management.rs
tests/payment_address/: main.rs  payment_address_legacy_tests.rs  payment_address_multi_payment_tests.rs  payment_address_v0_lut_tests.rs  payment_address_v0_tests.rs
tests/rpc/: basic_endpoints.rs  compute_budget.rs  fee_estimation.rs  main.rs  transaction_signing.rs  transfers.rs
tests/src/: lib.rs
tests/src/common/: assertions.rs  auth_helpers.rs  client.rs  constants.rs  extension_helpers.rs  helpers.rs  lookup_tables.rs  mod.rs  setup.rs  transaction.rs
tests/src/common/fixtures/: auth-test.toml  fee-payer-policy-test.toml  kora-free-test.toml  kora-test.toml  paymaster-address-test.toml  signers-multi.toml  signers-privy.toml  signers-turnkey.toml  signers.toml
tests/src/common/local-keys/: fee-payer-local.json  fee-payer-policy-mint-local-2022.json  fee-payer-policy-mint-local.json  mint-2022-interest-bearing.json  mint-transfer-hook-local.json  payment-local.json  sender-local.json  signer2-local.json  usdc-mint-2022-local.json  usdc-mint-local.json
tests/src/common/transfer-hook-example/: Cargo.toml  build.sh  transfer-hook-keypair.json
tests/src/common/transfer-hook-example/src/: lib.rs
tests/src/test_runner/: accounts.rs  commands.rs  config.rs  kora.rs  mod.rs  output.rs  test_cases.toml  validator.rs
tests/tokens/: main.rs  token_2022_extensions_test.rs  token_2022_test.rs
(+4 files in other folders)
