[workspace]
members = ["crates/lib", "crates/cli", "tests",]
resolver = "2"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
module_inception = { level = "allow", priority = 0 }

[workspace.package]
version = "2.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/solana-foundation/kora"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.95"
thiserror = "1.0"
progenitor = "0.8.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
dotenv = "0.15"
jsonrpsee = { version = "0.16.2", features = [
    "server",
    "macros",
    "http-client",
    "client",
] }
solana-sdk = "3.0.0"
solana-commitment-config = "3.0.0"
solana-message = "3.0.1"
solana-system-interface = "2.0.0"
solana-transaction-status-client-types = "3.0.8"
solana-transaction-status = "3.0.8"
solana-address-lookup-table-interface = "3.0.0"
solana-program = "3.0.0"
solana-program-pack = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-client = "3.0.8"
bs58 = "0.5.1"
bincode = "1.3.3"
borsh = "1.5.3"
async-std = "1.13.0"
jsonrpsee-core = { version = "0.16.2", features = ["server"] }
env_logger = "0.11.5"
async-trait = "0.1.89"
base64 = "0.22.1"
log = "0.4.22"
bytes = "1.9.0"
reqwest = { version = "0.12.9", features = ["json", "blocking", "native-tls"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full", "cors"] }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.41.1", features = ["full"] }
prettyplease = "0.2.25"
syn = "2.0.89"
parking_lot = "0.12"
once_cell = "1.20.2"
futures-util = "0.3.31"
hyper = "1.5.1"
http = "0.2"
toml = "0.8.19"
spl-token-interface = { version = "2.0.0" }
spl-token-2022-interface = { version = "2.0.0" }
spl-associated-token-account-interface = { version = "2.0.0" }
chrono = "0.4.39"
hex = "0.4.3"
p256 = "0.13.3"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.0"
vaultrs = "0.7.3"
utoipa = { version = "4.2.0", features = ["yaml", "chrono"] }
hmac = "0.12.1"
sha2 = "0.10.9"
prometheus = "0.14.0"
http-body-util = "0.1.3"
subtle = "2.6.1"
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
