[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"


[[test]]
name = "rpc"
path = "rpc/main.rs"

[[test]]
name = "tokens"
path = "tokens/main.rs"

[[test]]
name = "auth"
path = "auth/main.rs"

[[test]]
name = "adversarial"
path = "adversarial/main.rs"

[[test]]
name = "fee_payer_policy"
path = "fee_payer_policy/main.rs"

[[test]]
name = "multi_signer"
path = "multi_signer/main.rs"

[[test]]
name = "external"
path = "external/main.rs"

[[test]]
name = "payment_address"
path = "payment_address/main.rs"

[[test]]
name = "free_signing"
path = "free_signing/main.rs"

[dependencies]
kora-lib = { path = "../crates/lib" }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-program-pack = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-client = { workspace = true }
spl-token-interface = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-transfer-hook-interface = { version = "2.0.0" }
bincode = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
colored = "3.0"
serde = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
